[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-ahu"
version = "0.1.0"
description = "FastAPI-based virtual AHU simulator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.setuptools.packages.find]
include = ["app*"]
